--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<script src="script.js"></script>
 		<title>Rina's game</title>
 	</head>
 	<body>
 		<div class="background"></div>
 		<div class="girl">
 			<img src="images/girl-1.png" />
+		</div>
+		<div class="clothes">
+			<img src="images/black-trening.png" class="draggable" alt="Clothing 1" />
+			<img src="images/blue-nike.png" class="draggable" alt="Clothing 2" />
+			<img src="images/bruin-trui.png" class="draggable" alt="Clothing 3" />
+			<img src="images/grey-jeans.png" class="draggable" alt="Clothing 4" />
+			<img src="images/newballance.png" class="draggable" alt="Clothing 5" />
+			<img src="images/pink-trui.png" class="draggable" alt="Clothing 6" />
+			<img src="images/pleated-skirt.png" class="draggable" alt="Clothing 7" />
+			<img src="images/white-tshirt.png" class="draggable" alt="Clothing 8" />
 		</div>
 	</body>
 </html>
